--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "<br/>",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DvaKompota/FETA-Playwright.git"
@@ -19,10 +17,12 @@
   "homepage": "https://github.com/DvaKompota/FETA-Playwright#readme",
   "dependencies": {
     "@cucumber/cucumber": "^8.7.0",
-    "@playwright/test": "^1.27.1",
     "chai": "^4.3.7",
-    "playwright": "^1.27.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "playwright": "^1.27.1",
+    "@playwright/test": "^1.27.1"
   }
 }
