--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "<br/>",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "precucumber": "rimraf reports && mkdir reports && echo {} > reports/report.json",
+    "transpile": "rimraf dist && babel --extensions .ts --out-dir dist src",
+    "cucumber-compile": "yarn transpile && cucumber-js",
+    "cucumber": "yarn cucumber-compile",
+    "postcucumber": "ts-node ./src/cucumber-report.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DvaKompota/FETA-Playwright.git"
@@ -16,13 +22,18 @@
   },
   "homepage": "https://github.com/DvaKompota/FETA-Playwright#readme",
   "dependencies": {
-    "@cucumber/cucumber": "^8.7.0",
-    "chai": "^4.3.7",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "cucumber-html-reporter": "^5.5.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@cucumber/cucumber": "^8.9.0",
+    "@playwright/test": "^1.27.1",
+    "dotenv": "^16.0.3",
     "playwright": "^1.27.1",
-    "@playwright/test": "^1.27.1"
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
