adds `TEST_DATA_PATH` environment variable

--- a/src/tests/react-app/setup/config.env
+++ b/src/tests/react-app/setup/config.env
@@ -6,6 +6,7 @@ HTML_REPORT_FILE = "./reports/cucumber-html-report.html"
 HOSTS_URLS_PATH = "/src/resources/react-app/config/hosts.json"
 PAGE_URLS_PATH = "/src/resources/react-app/config/pages.json"
 PAGE_ELEMENTS_PATH = "/src/resources/react-app/config/mappings/"
+TEST_DATA_PATH = "/src/resources/react-app/test-data/"
 SCRIPT_TIMEOUT = 15000
 HEADLESS = true
 DEVTOOLS = false
